Closed Bug 1303029 Opened 9 years ago Closed 9 years ago

nsLocation doesn't have username/password

Categories

(Core :: DOM: Core & HTML, defect)

50 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file)

No description provided.
Attachment #8791601 - Flags: review?(bugs)
Comment on attachment 8791601 [details] [diff] [review] location_username.patch Hmm, when were these added. Odd stuff.
Attachment #8791601 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a96d20959be2 nsLocation doesn't have username/password, r=smaug
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: