Bug 1303029 - nsLocation doesn't have username/password, r=smaug